@@ -1,3 +1,15 @@
+Thu Apr 30 17:31:38 BST 2009    Tom Mortimer <tom@lemurconsulting.com>
+
+    * flaxclient.php: Added searchJSON method.
+    * unittests/test_search.php: Search unit tests.
+    * unittests/runtests.php: Added test_search.
+
+Thu Apr 30 11:26:53 BST 2009    Tom Mortimer <tom@lemurconsulting.com>
+
+    * flax/searchserver/schema.py: Added validation of field properties.
+    * flax/searchserver/application.py: Added validation of field properties.
+      Disabled field overwrite protection.
+
 Wed Apr 29 15:46:12 BST 2009    Tom Mortimer <tom@lemurconsulting.com>
 
     * flaxclient.php: Removed replaceDocument and added searchSimple.
